samples/_failures_safe/1761177771_13faab_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6cc47466.c: In function ‘main’:
./samples/SAFE/__tmp_6cc47466.c:176:5: error: expected declaration or statement at end of input
  176 |     }
      |     ^
